--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ CLOUNDINARY_APISECRET=q2sj6VZpRYiWeTtAR58VZ5Lcpe4
 #JWT
 JWT_SECRET=fnajnjdn@mfdndjnsdfgkfn
 EXPRIRE_IN_TOKEN=24h
+
+#MOMO
+PARTNER_CODE=MOMOUR2S20210830
+ACCESS_KEY=zV8bQQqebfkOpXm8
+SECRET_KEY=URjMechix19xzhkqAP7Ev1Zhqyo5ZWEt
+IPN_URL=https://e982-14-186-29-169.ap.ngrok.io/category
+REDIRECT_URL=https://e982-14-186-29-169.ap.ngrok.io/category
