--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ EXPRIRE_IN_TOKEN=24h
 PARTNER_CODE=MOMOUR2S20210830
 ACCESS_KEY=zV8bQQqebfkOpXm8
 SECRET_KEY=URjMechix19xzhkqAP7Ev1Zhqyo5ZWEt
-IPN_URL=https://e982-14-186-29-169.ap.ngrok.io/category
-REDIRECT_URL=https://e982-14-186-29-169.ap.ngrok.io/category
+IPN_URL=https://6a6e-14-186-29-22.ap.ngrok.io/momo/notification
+REDIRECT_URL=https://127.0.0.1:3000
