add forgotpassword, filter product api

--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ ACCESS_KEY=zV8bQQqebfkOpXm8
 SECRET_KEY=URjMechix19xzhkqAP7Ev1Zhqyo5ZWEt
 IPN_URL=https://6a6e-14-186-29-22.ap.ngrok.io/momo/notification
 REDIRECT_URL=https://127.0.0.1:3000
+
+#GOOGLE
+MY_EMAIL=phamanhtuan9a531@gmail.com
+MY_EMAIL_PASSWORD=ognedwfoiotkyous
+
+#MY_SETTING
+UPDATE_NEW_PASSWORD_URL=http://127.0.0.1:3000/updateNewPassword
