--- a/.env
+++ b/.env
@@ -21,3 +21,4 @@ MY_EMAIL_PASSWORD=ognedwfoiotkyous
 
 #MY_SETTING
 UPDATE_NEW_PASSWORD_URL=http://127.0.0.1:3000/updateNewPassword
+NUMBER_COMMING_OUT_OF_STOCK=50
