--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
   },
