--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "moment": "^2.29.4",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.1",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.2",
