--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://root:duytuyen13@cluster0.9a2nw.mongodb.net/quanaodb
+MONGO_URI=mongodb+srv://root:quanglong2109@cluster0.bhry4.mongodb.net/phuc
 
 CLOUNDINARY_NAME=imgforme
 CLOUNDINARY_APIKEY=675789842589339
@@ -12,11 +12,11 @@ EXPRIRE_IN_TOKEN=24h
 PARTNER_CODE=MOMOUR2S20210830
 ACCESS_KEY=zV8bQQqebfkOpXm8
 SECRET_KEY=URjMechix19xzhkqAP7Ev1Zhqyo5ZWEt
-IPN_URL=https://6a6e-14-186-29-22.ap.ngrok.io/momo/notification
-REDIRECT_URL=https://127.0.0.1:3000
+IPN_URL=https://a6f8-14-161-48-112.ap.ngrok.io/momo/notification
+REDIRECT_URL=http://127.0.0.1:3001
 
 #GOOGLE
-MY_EMAIL=phamanhtuan9a531@gmail.com
+MY_EMAIL=tuyenalo2@gmail.com
 MY_EMAIL_PASSWORD=ognedwfoiotkyous
 
 #MY_SETTING
